Fix htdigest issue in lighty conf

--- a/config/lighttpd/rutorrent.tigris.id.au.conf
+++ b/config/lighttpd/rutorrent.tigris.id.au.conf
@@ -8,7 +8,7 @@ $HTTP["host"] =~ "^rutorrent.tigris.id.au$" {
   auth.backend.htpasswd.file = "/home/danial/git/util-private/.htpasswd"
   auth.require = (
     "" => (
-      "method" => "digest",
+      "method" => "htdigest",
       "realm"  => "rutorrent",
       "require" => "valid-user"
     )
