More lighty config fixes for basic auth

--- a/config/lighttpd/rutorrent.tigris.id.au.conf
+++ b/config/lighttpd/rutorrent.tigris.id.au.conf
@@ -5,10 +5,10 @@ $HTTP["host"] =~ "^rutorrent.tigris.id.au$" {
   server.document-root = "/srv/rutorrent.tigris.id.au/public"
 
   auth.backend = "htpasswd"
-  auth.backend.htpasswd.file = "/home/danial/git/util-private/.htpasswd"
+  auth.backend.htpasswd.userfile = "/home/danial/git/util-private/.htpasswd"
   auth.require = (
     "" => (
-      "method" => "htdigest",
+      "method" => "basic",
       "realm"  => "rutorrent",
       "require" => "valid-user"
     )
