--- a/config/lighttpd/rutorrent.tigris.id.au.conf
+++ b/config/lighttpd/rutorrent.tigris.id.au.conf
@@ -14,6 +14,25 @@ $HTTP["host"] =~ "^rutorrent.tigris.id.au$" {
     )
   )
 
+  fastcgi.server = (
+    ".php" => (
+      "rutorrent.tigris.id.au" => (
+        "bin-path" => "/usr/bin/php-cgi",
+        "socket" => "/tmp/php.socket",
+        "max-procs" => 1,
+        "idle-timeout" => 20,
+        "bin-environment" => (
+          "PHP_FCGI_CHILDREN" => "4",
+          "PHP_FCGI_MAX_REQUESTS" => "10000"
+        ),
+        "bin-copy-environment" => (
+          "PATH", "SHELL", "USER"
+        ),
+        "broken-scriptfilename" => "enable"
+      )
+    )
+  )
+
   scgi.server = (
     "/RPC2" => (
       "127.0.0.1" => (
