--- a/config/rtorrent/.rtorrent.rc
+++ b/config/rtorrent/.rtorrent.rc
@@ -14,3 +14,4 @@ scgi_local = /home/danial/.rtorrent/socket/rpc.socket
 schedule = chmod,0,0,"execute=chmod,777,/home/danial/.rtorrent/socket/rpc.socket"
 schedule = watch_directory,10,10,load_start=/home/danial/.rtorrent/watch/*.torrent
 execute = {sh,-c,/usr/bin/php /srv/rutorrent.tigris.id.au/php/initplugins.php danial &}
+port_random = yes
