Custom error/access logs

--- a/config/lighttpd/rutorrent.tigris.id.au.conf
+++ b/config/lighttpd/rutorrent.tigris.id.au.conf
@@ -1,5 +1,7 @@
 $HTTP["host"] =~ "^rutorrent.tigris.id.au$" {
   server.document-root = "/srv/rutorrent.tigris.id.au/public"
+  server.errorlog      = "/var/log/lighttpd/rutorrent.tigris.id.au-error.log"
+  accesslog.filename   = "/var/log/lighttpd/rutorrent.tigris.id.au-access.log"
 
   auth.backend = "htpasswd"
   auth.backend.htpasswd.userfile = "/home/danial/git/util-private/.htpasswd"
