--- a/config/rtorrent/.rtorrent.rc
+++ b/config/rtorrent/.rtorrent.rc
@@ -1,21 +1,24 @@
-use_udp_trackers = yes
-directory = /home/danial/torrents
-session = /home/danial/.rtorrent/session
-port_range = 50000-60000
-min_peers = 1
-max_peers = 400
-min_peers_seed = -1
-max_peers_seed = -1
-check_hash = yes
-peer_exchange = no
-tracker_numwant = -1
-encoding_list = UTF-8
-pieces.sync.always_safe = yes
-network.receive_buffer.size = 8K
-network.send_buffer.size = 8K
-max_memory_usage = 1024M
-scgi_local = /home/danial/.rtorrent/socket/rpc.socket
+trackers.use_udp.set = yes
+directory.default.set = /home/danial/torrents
+session.path.set = /home/danial/.rtorrent/session
+network.port_range.set = 50000-60000
+throttle.min_peers.normal.set = 1
+throttle.max_peers.normal.set = 400
+throttle.min_peers.seed.set = -1
+throttle.max_peers.seed.set = -1
+pieces.hash.on_completion.set = yes
+protocol.pex.set = no
+trackers.numwant.set = -1
+encoding.add = UTF-8
+pieces.sync.always_safe.set = yes
+network.receive_buffer.size.set = 8K
+network.send_buffer.size.set = 8K
+file.prioritize_toc.set = 1
+file.prioritize_toc.first.set = {*.avi,*.mp4,*.mkv,*.gz}
+file.prioritize_toc.last.set = {*.zip}
+pieces.memory.max.set = 1024M
+network.scgi.open_local = /home/danial/.rtorrent/socket/rpc.socket
 schedule = chmod,0,0,"execute=chmod,777,/home/danial/.rtorrent/socket/rpc.socket"
-schedule = watch_directory,10,10,load_start=/home/danial/.rtorrent/watch/*.torrent
+schedule = watch_directory,10,10,load.start=/home/danial/.rtorrent/watch/*.torrent
 execute = {sh,-c,/usr/bin/php /srv/rutorrent.tigris.id.au/php/initplugins.php danial &}
-port_random = yes
+network.port_random.set = yes
