--- a/config/rtorrent/.rtorrent.rc
+++ b/config/rtorrent/.rtorrent.rc
@@ -1,24 +1,41 @@
+# PEERS #
+throttle.min_peers.normal.set = 15
+throttle.max_peers.normal.set = 90
+throttle.min_peers.seed.set = 30
+throttle.max_peers.seed.set = 90
+throttle.max_uploads.set = 125
 trackers.use_udp.set = yes
-directory.default.set = /home/danial/torrents
-session.path.set = /home/danial/.rtorrent/session
-network.port_range.set = 50000-60000
-throttle.min_peers.normal.set = 1
-throttle.max_peers.normal.set = 400
-throttle.min_peers.seed.set = -1
-throttle.max_peers.seed.set = -1
-pieces.hash.on_completion.set = yes
-protocol.pex.set = no
 trackers.numwant.set = -1
-encoding.add = UTF-8
+
+# MEMORY #
+pieces.hash.on_completion.set = yes
+pieces.memory.max.set = 1073741824
+system.hash.read_ahead.set = 16
+system.hash.interval.set = 40
+system.hash.max_tries.set = 1
+pieces.preload.type.set = 1
+
+# NETWORKING #
+network.port_range.set = 50000-60000
+network.port_random.set = yes
+network.scgi.open_local = /home/danial/.rtorrent/socket/rpc.socket
+protocol.pex.set = no
+protocol.encryption.set = allow_incoming,enable_retry,prefer_plaintext
+dht.mode.set = disable
 pieces.sync.always_safe.set = yes
-network.receive_buffer.size.set = 8K
-network.send_buffer.size.set = 8K
+network.receive_buffer.size.set = 1048576
+network.send_buffer.size.set = 131072
+network.max_open_sockets.set = 512
+
+# FILES #
 file.prioritize_toc.set = 1
 file.prioritize_toc.first.set = {*.avi,*.mp4,*.mkv,*.gz}
 file.prioritize_toc.last.set = {*.zip}
-pieces.memory.max.set = 1024M
-network.scgi.open_local = /home/danial/.rtorrent/socket/rpc.socket
+
+# SYSTEM #
+encoding.add = UTF-8
+directory.default.set = /home/danial/torrents
+session.path.set = /home/danial/.rtorrent/session
+execute = {sh,-c,/usr/bin/php /srv/rutorrent.tigris.id.au/php/initplugins.php danial &}
 schedule = chmod,0,0,"execute=chmod,777,/home/danial/.rtorrent/socket/rpc.socket"
 schedule = watch_directory,10,10,load.start=/home/danial/.rtorrent/watch/*.torrent
-execute = {sh,-c,/usr/bin/php /srv/rutorrent.tigris.id.au/php/initplugins.php danial &}
-network.port_random.set = yes
