--- a/config/nginx/rutorrent.tigris.id.au.conf
+++ b/config/nginx/rutorrent.tigris.id.au.conf
@@ -11,7 +11,7 @@ server {
     include       fastcgi_params;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_pass  unix:/var/run/php-fpm/php-fpm.sock;
+    fastcgi_pass  unix:/var/run/php5-fpm.sock;
   }
   location /RPC2 {
     scgi_pass unix:/home/danial/.rtorrent/socket/rpc.socket;
