--- a/config/rtorrent/danial.rtorrent.rc
+++ b/config/rtorrent/danial.rtorrent.rc
@@ -17,7 +17,8 @@ network.port_range.set = 50000-60000
 network.port_random.set = yes
 network.scgi.open_local = /home/danial/.rtorrent/socket/rpc.socket
 protocol.pex.set = no
-protocol.encryption.set = allow_incoming,enable_retry,prefer_plaintext
+protocol.encryption.set = allow_incoming,try_outgoing,require,require_RC4
+#protocol.encryption.set = allow_incoming,try_outgoing,enable_retry
 dht.mode.set = disable
 pieces.sync.always_safe.set = yes
 network.receive_buffer.size.set = 1048576
