--- a/config/nginx/rutorrent.tigris.id.au.conf
+++ b/config/nginx/rutorrent.tigris.id.au.conf
@@ -1,6 +1,6 @@
 server {
-  listen 80;
-  server_name rutorrent.tigris.id.au;
+  listen 83;
+  server_name _;
   root /srv/rutorrent.tigris.id.au/public;
   index index.php index.html;
   auth_basic "Restricted";
