--- a/config/rtorrent/danial.rtorrent.rc
+++ b/config/rtorrent/danial.rtorrent.rc
@@ -24,6 +24,7 @@ pieces.sync.always_safe.set = yes
 network.receive_buffer.size.set = 1048576
 network.send_buffer.size.set = 131072
 network.max_open_sockets.set = 512
+network.max_open_files.set = 64
 
 # FILES #
 file.prioritize_toc.set = 1
