--- a/config/rtorrent/danial.rtorrent.rc
+++ b/config/rtorrent/danial.rtorrent.rc
@@ -37,4 +37,4 @@ directory.default.set = /home/danial/.rtorrent/dl
 session.path.set = /home/danial/.rtorrent/session
 execute = {sh,-c,/usr/bin/php /srv/rutorrent.tigris.id.au/php/initplugins.php danial &}
 schedule = chmod,0,0,"execute=chmod,777,/home/danial/.rtorrent/socket/rpc.socket"
-schedule = watch_directory,10,10,load.start=/home/danial/.rtorrent/watch/*.torrent
+schedule = watch_directory,10,10,load=/home/danial/.rtorrent/watch/*.torrent
