Tweak some torrent settings

--- a/config/rtorrent/danial.rtorrent.rc
+++ b/config/rtorrent/danial.rtorrent.rc
@@ -16,15 +16,15 @@ pieces.preload.type.set = 1
 network.port_range.set = 50000-60000
 network.port_random.set = yes
 network.scgi.open_local = /home/danial/.rtorrent/socket/rpc.socket
-protocol.pex.set = no
-protocol.encryption.set = allow_incoming,try_outgoing,require
-#protocol.encryption.set = allow_incoming,try_outgoing,enable_retry
-dht.mode.set = disable
+protocol.pex.set = yes
+protocol.encryption.set = allow_incoming,try_outgoing,require,require_RC4
+dht.mode.set = on
 pieces.sync.always_safe.set = yes
 network.receive_buffer.size.set = 1048576
 network.send_buffer.size.set = 131072
 network.max_open_sockets.set = 512
 network.max_open_files.set = 64
+network.http.ssl_verify_peer.set = no
 
 # FILES #
 file.prioritize_toc.set = 1
