--- a/config/rtorrent/danial.rtorrent.rc
+++ b/config/rtorrent/danial.rtorrent.rc
@@ -23,13 +23,13 @@ pieces.sync.always_safe.set = yes
 network.receive_buffer.size.set = 1048576
 network.send_buffer.size.set = 131072
 network.max_open_sockets.set = 512
-network.max_open_files.set = 64
+network.max_open_files.set = 1024
 network.http.ssl_verify_peer.set = no
 
 # FILES #
 file.prioritize_toc.set = 1
 file.prioritize_toc.first.set = {*.avi,*.mp4,*.mkv,*.gz}
-file.prioritize_toc.last.set = {*.zip}
+file.prioritize_toc.last.set = {*.nfo,*.txt,*.zip}
 
 # SYSTEM #
 encoding.add = UTF-8
